--- a/style.css
+++ b/style.css
@@ -434,6 +434,10 @@ button {
   line-height: 1.3;
 }
 
+.player-name.player-name-self {
+  font-weight: 800;
+}
+
 .player-role {
   font-size: 11px;
   color: #a6acd0;
